--- a/templates/whitechapel_pages/index.html
+++ b/templates/whitechapel_pages/index.html
@@ -101,7 +101,7 @@
 	<div class="row"><!-- Themes -->
 		<div class="col-xs-12">
 			<h1 class="front-page-heading">Explore Whitechapel</h1>
-			<p class="lead">Not sure where to begin? Click on a theme to start uncovering Whitechapel's past.</p>
+			<p class="lead">Not sure where to begin? Click on a theme to start uncovering Whitechapel's past. Sites are being tagged if they connect with certain overlapping aspects of Whitechapel's history, according to the thematic categories identified here.</p>
 			<br />
 		</div>
 	</div>
