--- a/templates/map/base.html
+++ b/templates/map/base.html
@@ -107,7 +107,7 @@
 							</ul>
 	    				</li>
 	    			{% else %}
-	    				<a href="{% url 'account_login' %}" class="btn btn-default navbar-btn btn-block">Sign In</a>
+	    				<a href="{% url 'account_login' %}" class="btn btn-default navbar-btn">Sign In</a>
 	    			{% endif %}
 	    			</ul>
 	    			<form class="navbar-form navbar-right" role="search" action="{% url 'search_map' %}" type="get">
