--- a/templates/whitechapel_pages/index.html
+++ b/templates/whitechapel_pages/index.html
@@ -24,9 +24,18 @@
 		</div>
 	</div>
 	<div class="carousel">
+		{% if page.banner_image_1 %}
 		<div style="background-image: url('/media/{{ page.banner_image_1 }}'); background-size: cover; display: block; width: 100%; height: 600px; background-position: center center;'"></div>
+		{% endif %}
+		{% if page.banner_image_2 %}
 		<div style="background-image: url('/media/{{ page.banner_image_2 }}'); background-size: cover; display: block; width: 100%; height: 600px; background-position: center center;'"></div>
+		{% endif %}
+		{% if page.banner_image_3 %}
 		<div style="background-image: url('/media/{{ page.banner_image_3 }}'); background-size: cover; display: block; width: 100%; height: 600px; background-position: center center;'"></div>
+		{% endif %}
+		{% if page.banner_image_4 %}
+		<div style="background-image: url('/media/{{ page.banner_image_4 }}'); background-size: cover; display: block; width: 100%; height: 600px; background-position: center center;'"></div>
+		{% endif %}
 	</div>
 </div>
 {% load thumbnail %}
