added backup script, changed help video

--- a/templates/whitechapel_pages/index.html
+++ b/templates/whitechapel_pages/index.html
@@ -96,10 +96,10 @@
 				{% endfor %}
 			</div>
 		</div><!-- / Featured Contribution -->
-		<div class="col-xs-12 col-md-8"><! Help Movie -->
+		<div class="col-xs-12 col-md-8"><!-- Help Movie -->
 			<h1 class="front-page-heading">Browsing the Map</h1>
 			<div class="embed-responsive embed-responsive-16by9">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/EoUhVp5NIQE" frameborder="0" allowfullscreen></iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/q3A1ov8xoLc" frameborder="0" allowfullscreen></iframe>
 			</div>
 			<p class="lead">If you're not sure about how to get started, we've made a short video to give you a quick overview.</p>
 		</div>
