--- a/templates/map/base.html
+++ b/templates/map/base.html
@@ -19,10 +19,10 @@
 		<script>
 			/*L_PREFER_CANVAS = true;*/
 		</script>
-		<!--<script type="text/javascript" src="{% static 'leaflet/leaflet.js' %}"></script>
-		<link rel="styleseet" href="{% static 'leaflet/leaflet.css' %}" />-->
-		<script src='https://api.mapbox.com/mapbox.js/v2.2.4/mapbox.js'></script>
-		<link href='https://api.mapbox.com/mapbox.js/v2.2.4/mapbox.css' rel='stylesheet' />
+		<script type="text/javascript" src="{% static 'leaflet/leaflet.js' %}"></script>
+		<link rel="stylesheet" href="{% static 'leaflet/leaflet.css' %}" />
+		<!--<script src='https://api.mapbox.com/mapbox.js/v2.2.4/mapbox.js'></script>
+		<link href='https://api.mapbox.com/mapbox.js/v2.2.4/mapbox.css' rel='stylesheet' />-->
 		<!--<script type="text/javascript" src="{% static 'leaflet/leaflet.js' %}"></script>
 		<script src='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.standalone.js'></script>
 		<link href='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.css' rel='stylesheet' />-->
