added leaflet cdn link

--- a/templates/map/base.html
+++ b/templates/map/base.html
@@ -19,8 +19,8 @@
 		<script>
 			/*L_PREFER_CANVAS = true;*/
 		</script>
-		<script type="text/javascript" src="{% static 'leaflet/leaflet.js' %}"></script>
-		<link rel="stylesheet" href="{% static 'leaflet/leaflet.css' %}" />
+		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.css" />
+		<script src="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script>
 		<!--<script src='https://api.mapbox.com/mapbox.js/v2.2.4/mapbox.js'></script>
 		<link href='https://api.mapbox.com/mapbox.js/v2.2.4/mapbox.css' rel='stylesheet' />-->
 		<!--<script type="text/javascript" src="{% static 'leaflet/leaflet.js' %}"></script>
