--- a/templates/map/base.html
+++ b/templates/map/base.html
@@ -15,15 +15,23 @@
 		<link rel="stylesheet" href="{% static 'bower_components/bootstrap/dist/css/bootstrap.css' %}">
 		<script type="text/javascript" src="{% static 'bower_components/jquery/dist/jquery.js' %}"></script>
 		<script type="text/javascript" src="{% static 'bower_components/bootstrap/dist/js/bootstrap.js' %}"></script>
-		<!-- Mapbox -->
-		<script>
+		
+		<!-- MapBox - Disabled due to IE performance bug -->
+		<!--<script>
 			/*L_PREFER_CANVAS = true;*/
 		</script>
 		<script src='https://api.mapbox.com/mapbox.js/v2.2.4/mapbox.js'></script>
 		<link href='https://api.mapbox.com/mapbox.js/v2.2.4/mapbox.css' rel='stylesheet' />
-		<script type="text/javascript" src="{% static 'js/map_functions.js' %}"></script>
+		<script type="text/javascript" src="{% static 'js/map_functions.js' %}"></script>-->
+		
+		<!-- Leaflet 1.0rc3 -->
+		<script src="{% static 'leaflet-1.0rc3/leaflet.js' %}"></script>
+		<link href="{% static 'leaflet-1.0rc3/leaflet.css' %}" rel="stylesheet" />
+		<script type="text/javascript" src="{% static 'js/leaflet-1.0rc3_map_functions.js' %}"></script>
+		
 		<!-- Custom styles -->
 		<link rel="stylesheet" href="{% static 'css/styles.css' %}">
+		
 		<!-- Medium Editor -->
 		<script src="{% static 'js/medium-editor/medium-editor.js' %}"></script>
 		<link rel="stylesheet" href="{% static 'css/medium-editor/medium-editor.css' %}">
