removed draft, hid borked contributors list on blog

--- a/templates/map/base.html
+++ b/templates/map/base.html
@@ -90,7 +90,7 @@
 		<nav class="navbar navbar-default navbar-fixed-top">
 			<div class="container-fluid">
 			    <div class="navbar-header navbar-left">
-      				<a class="navbar-brand" href="/">Survey of London <span class="label label-primary" style="font-family: 'Helvetica', sans-serif;">Draft</span></a>
+      				<a class="navbar-brand" href="/">Survey of London</a>
       				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
 				        <span class="sr-only">Toggle navigation</span>
 				        <span class="icon-bar"></span>
