--- a/templates/whitechapel_pages/index.html
+++ b/templates/whitechapel_pages/index.html
@@ -17,7 +17,7 @@
 	</style>
 	<div class="container" style="position: relative; z-index: 2;">
 		<h1 class="text-center">{{ title }}</h1>
-		<h2 class="text-center">{{ page.title }} | Draft</h2>
+		<h2 class="text-center">{{ page.title }}</h2>
 		<br />
 		<div class="text-center">
 			<a href="{% url 'map_home' %}" class="btn btn-lg explore">Explore the Map</a>
