honeypot bug fixed! try on media site first

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -36,6 +36,8 @@
         <form class="login" method="POST" action="{% url 'account_login' %}">
           {% csrf_token %}
           {% load crispy_forms_tags %}
+          {% load honeypot %}
+          {% render_honeypot_field "phone_number" %}
           {{ form|crispy }}
           {% if last_feature %}
           <input type="hidden" name="next" value="/map/?last_feature={{ last_feature }}" />
