--- a/templates/map/add_image.html
+++ b/templates/map/add_image.html
@@ -15,6 +15,8 @@
 				{% load crispy_forms_tags %}
 				{% csrf_token %}
 				{{ form|crispy }}
+				{% load honeypot %}
+            	{% render_honeypot_field "phone_number" %}
 			</div>
 			<div class="col-xs-12 col-md-8 col-md-offset-2">
 				<input type="submit" name="submit" value="Save to Edit Later" class="btn btn-default"/>
