changed ckeditor configuration to include blockquotes, added recently approved panel to dashboard, added share buttons

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -516,6 +516,11 @@ p.results-preview {
 	background-position: center;
 }
 
+.social_share {
+	line-height: 9px;
+	margin-bottom: 1em;
+}
+
 /* Medium Editor */
 
 #div_id_body .controls {
